# dotfiles

./: .zshrc  CLAUDE.md  EnvironmentSetupMakefile  LICENSE  Makefile  Pipfile  README.md  ShellSetupMakefile  gitconfig  init.vim  install.sh  install_python.sh  justfile  pyproject.toml  setup.sh  setup_all.sh  setup_claude_config.sh  setup_python_config.sh  setup_shell.sh  test_python_setup.sh  zshrc_update
